--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,1 @@
-body {
-  min-height: 100vh;
-  font-family: "Now", sans-serif;
-}
-
-section {
-  width: 100%;
-}
-
-.resume-card .resume-divider {
-  border-bottom: 1px solid var(--bs-gray-dark);
-  width: 33%;
-}/*# sourceMappingURL=styles.css.map */
+body{min-height:100vh;font-family:"Now",sans-serif}section{width:100%}.resume-card .resume-divider{border-bottom:1px solid var(--bs-gray-dark);width:33%}@media(max-width: 1024px){.arrow-large-screen{display:none}}@media(min-width: 1024px){.arrow-small-screen{display:none}}
